# google-tools

./: .gitignore  .python-version  Makefile  pyproject.toml
inputs/: sample.csv
notebooks/: gdrive-test.ipynb  gsheets-test.ipynb  sample-charts.ipynb  scrab1.ipynb
src/google_tools/: chart_setup.py  creds.py  drive_utils.py  sheets_utils.py
tests/: test_google_tools.py
