[tool.poetry]
name = "google-tools"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.8.5"
pandas = "^1.2.4"
numpy = "^1.20.2"
google-api-python-client = "^2.3.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.4.4"
matplotlib = "^3.4.1"
scikit-learn = "^0.24.2"
jupyter = "^1.0.0"
jupyter-contrib-nbextensions = "^0.5.1"
PyYAML = "^5.4.1"
pyarrow = "^4.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
